# XUIEditor

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  TemplateApplication.fbp  TemplateApplication.xrc  XUIEditor.fbp  XUIEditor.xrc
src/: Application.cpp  Application.hpp  Config.cpp  Config.hpp  main.cpp
src/Commands/: CommandProcessor.cpp  CommandProcessor.hpp
src/Model/: Model.hpp
src/View/XRC/: About.cpp  About.hpp  MainFrame.cpp  MainFrame.hpp  SettingsFrame.cpp  SettingsFrame.hpp  pch.hpp
